eclipse-workspace/Class1/src/objects/Customer__c.object
<CustomObject>
    <description>Customer table</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <displayFormat>{00}</displayFormat>
        <externalId>true</externalId>
        <label>CustomerID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Non-Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Ordered__c</fullName>
        <label>Last Ordered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Invoices__c</fullName>
        <label>Number of Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Az</fullName>
                </value>
                <value>
                    <fullName>Ca</fullName>
                </value>
                <value>
                    <fullName>Tx</fullName>
                </value>
                <value>
                    <fullName>Va</fullName>
                </value>
                <value>
                    <fullName>Wa</fullName>
                </value>
                <value>
                    <fullName>Mi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>can_contact_directly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>can contact directly</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DOB_should_not_be_greater_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>TODAY() -  DOB__c &lt; 18*365</errorConditionFormula>
        <errorMessage>A person must be greater than 18 years of age</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandate_city_if_customer_type_is_student</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Customer_Type__c , &apos;Student&apos;) &amp;&amp;  ISBLANK( City__c ),
true, 
false)</errorConditionFormula>
        <errorMessage>City cannot be blank for students</errorMessage>
    </validationRules>
</CustomObject>